# flir_camera

./: .gitignore  CMakeLists.txt  recorder.cpp  recorder_trigger.cpp  trigger.cpp
